--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "dist/electron/main.js",
   "devDependencies": {
+    "@electron/rebuild": "^4.0.1",
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -15,19 +18,25 @@
   "scripts": {
     "dev:next": "next dev ./renderer",
     "build:next": "next build ./renderer",
-    "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/electron/main.js",
+    "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/electron/main.js config=./config.yaml",
     "start": "electron .",
     "build": "tsc -p . && npm run build:next && electron-builder",
-    "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\""
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
+    "rebuild": "electron-rebuild",
+    "postinstall": "electron-rebuild"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "better-sqlite3": "^11.8.0",
+    "darkswap-client-core": "./darkSwap-client-core",
+    "js-yaml": "^4.1.0",
     "next": "^15.5.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zod": "^4.1.11"
   },
   "build": {
     "appId": "com.example.electronnextapp",
