--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "darkSwap-desktop",
   "version": "1.0.0",
-  "main": "dist/electron/main/main.js",
+  "main": "dist/main/main.js",
   "scripts": {
     "// dev": "=========== DEVELOPMENT MODE ===========",
     "dev:next": "cross-env NODE_ENV=development next dev renderer",
     "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/electron/main/main.js",
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
     "// build": "=========== PRODUCTION BUILD ===========",
+    "build:remove-old": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts && rm -rf release",
     "build:ts": "tsc -p .",
     "build:next": "next build renderer",
     "rebuild:native": "electron-builder install-app-deps",
-    "build:prod": "yarn build:ts && yarn build:next && yarn rebuild:native && electron-builder",
+    "build:prod": "cross-env NODE_ENV=production yarn build:remove-old && yarn build:ts && yarn build:next && yarn rebuild:native && electron-builder",
     "// misc": "=========== UTILITIES ===========",
     "postinstall": "electron-builder install-app-deps",
-    "start": "electron ."
+    "start": "electron .",
+    "start:next": "next start renderer"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -24,6 +26,7 @@
     "axios": "^1.13.2",
     "better-sqlite3": "^11.8.0",
     "darkswap-client-core": "./darkSwap-client-core",
+    "electron-serve": "^3.0.0",
     "ethers": "^6.15.0",
     "js-yaml": "^4.1.0",
     "next": "^15.5.4",
@@ -44,48 +47,5 @@
     "electron-builder": "^26.0.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
-  },
-  "build": {
-    "appId": "com.darkswap.desktop",
-    "productName": "DarkSwap",
-    "directories": {
-      "output": "release"
-    },
-    "asarUnpack": [
-      "**/node_modules/better-sqlite3/**"
-    ],
-    "files": [
-      "dist/**/*",
-      "package.json"
-    ],
-    "extraResources": [
-      {
-        "from": "renderer/out",
-        "to": "renderer/out"
-      },
-      "config.yaml"
-    ],
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "assets/icon.ico"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "perMachine": false
-    },
-    "mac": {
-      "target": [
-        "dmg"
-      ],
-      "icon": "assets/icon.icns"
-    }
   }
 }
