--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "// dev": "=========== DEVELOPMENT MODE ===========",
     "dev:next": "cross-env NODE_ENV=development next dev renderer",
-    "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/electron/main/main.js",
+    "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/main/main.js",
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
     "// build": "=========== PRODUCTION BUILD ===========",
     "build:remove-old": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts && rm -rf release",
