--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "types": ["node"],
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "darkSwap-client-core", "renderer"]
 }
