--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "electron-serve": "^3.0.0",
     "ethers": "^6.15.0",
     "js-yaml": "^4.1.0",
-    "next": "^15.5.4",
+    "next": "15.5.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zod": "^4.1.11"
