--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "// dev": "=========== DEVELOPMENT MODE ===========",
     "dev:remove-old": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts",
     "dev:next": "cross-env NODE_ENV=development next dev renderer",
-    "dev:electron": "tsc -p . && cross-env NODE_ENV=development electron ./dist/main/main.js",
-    "dev": "npm run dev:remove-old && concurrently \"npm run dev:next\" \"npm run dev:electron\"",
+    "dev:electron:testnet": "tsc -p . && cross-env NODE_ENV=development electron ./dist/main/main.js config=config/testnet/config.yaml",
+    "dev:electron:prod": "tsc -p . && cross-env NODE_ENV=development electron ./dist/main/main.js config=config/prod/config.yaml",
+    "dev:testnet": "npm run dev:remove-old && concurrently \"npm run dev:next\" \"npm run dev:electron:testnet\"",
+    "dev:prod": "npm run dev:remove-old && concurrently \"npm run dev:next\" \"npm run dev:electron:prod\"",
     "// build": "=========== PRODUCTION BUILD ===========",
-    "build:remove-old": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts && rm -rf release",
+    "build:remove-old:testnet": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts && rm -rf release/testnet",
+    "build:remove-old:prod": "rm -rf dist && rm -rf renderer/.next renderer/next-env.d.ts && rm -rf release/prod",
     "build:ts": "tsc -p .",
     "build:next": "next build renderer",
     "rebuild:native": "electron-builder install-app-deps",
-    "build:prod": "cross-env NODE_ENV=production yarn build:remove-old && yarn build:ts && yarn build:next && yarn rebuild:native && electron-builder",
+    "build:testnet": "cross-env NODE_ENV=production yarn build:remove-old:testnet && yarn build:ts && yarn build:next && yarn rebuild:native && electron-builder -c=./config/testnet/electron-builder.yaml",
+    "build:prod": "cross-env NODE_ENV=production yarn build:remove-old:prod && yarn build:ts && yarn build:next && yarn rebuild:native && electron-builder -c=./config/prod/electron-builder.yaml",
     "// misc": "=========== UTILITIES ===========",
     "postinstall": "electron-builder install-app-deps",
     "start": "electron .",
