--- a/config/prod/config.yaml
+++ b/config/prod/config.yaml
@@ -1,9 +1,7 @@
 chainRpcs:
-  - chainId: 845320009
-    rpcUrl: 'https://horizen-rpc-testnet.appchain.base.org/'
-  - chainId: 11155111
-    rpcUrl: 'https://api.zan.top/eth-sepolia'
+  - chainId: 8453
+    rpcUrl: 'https://base-rpc.publicnode.com'
 
 dbFilePath: ./db.sqlite3
-bookNodeSocketUrl: 'ws://stage.portalgate.me:20002'
-bookNodeApiUrl: 'https://stage.portalgate.me:20001'
+bookNodeSocketUrl: 'wss://ws.bn.darkswap.me'
+bookNodeApiUrl: 'https://bn.darkswap.me'
