--- a/config/testnet/config.yaml
+++ b/config/testnet/config.yaml
@@ -4,6 +4,6 @@ chainRpcs:
   - chainId: 11155111
     rpcUrl: 'https://api.zan.top/eth-sepolia'
 
-dbFilePath: ./db.sqlite3
+dbFilePath: 'darkSwap-testnet.db'
 bookNodeSocketUrl: 'ws://stage.portalgate.me:20002'
 bookNodeApiUrl: 'https://stage.portalgate.me:20001'
